--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="BeiJing">北京</string>
     <string name="ShenZhen">深圳</string>
     <string name="miao">秒</string>
+    <string name="shanghai_welcome">上海欢迎你</string>
 </resources>
